ingress-wildcard-host.yaml
# Definición de un recurso Ingress en Kubernetes
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-wildcard-host  # Nombre del recurso Ingress
spec:
  tls:
  - hosts:
      - 192.168.0.101.nip.io  # Lista de hosts para los que se aplicará TLS
    secretName: ingress-wildcard-host  # Nombre del secreto que contiene el certificado TLS
  rules:
  - host: "192.168.0.101.nip.io"  # Host al que se aplica la regla de Ingress
    http:
      paths:
      - pathType: Prefix
        path: "/"  # Ruta a la que se aplica la regla
        backend:
          service:
            name: ingress-wildcard-host  # Nombre del servicio backend
            port:
              number: 80  # Número de puerto del servicio backend
